# quassel-proxy

./: .gitignore  CMakeLists.txt
cmake/modules/: FindProtobuf.cmake
po/: hu.po
src/: CMakeLists.txt
src/client/: clientbufferviewmanager.cpp
src/common/: ircchannel.cpp  ircchannel.h  main.cpp
src/core/: corenetwork.cpp
src/proxy/: CMakeLists.txt  README  backlogrequester.cpp  backlogrequester.h  channelinfo.cpp  channelinfo.h  chatlinemodel.cpp  chatlinemodel.h  chatlinemodelitem.cpp  chatlinemodelitem.h  connectionmanager.cpp  connectionmanager.h  protocol.proto  protoconvert.cpp  protoconvert.h  prototools.cpp  prototools.h  proxy.cpp  proxy.h  proxyapplication.cpp  proxyapplication.h  proxyconnection.cpp  proxyconnection.h  proxymessageprocessor.cpp  proxymessageprocessor.h  proxyuser.cpp  proxyuser.h
src/qtui/: chatmonitorview.h
src/qtui/settingspages/: appearancesettingspage.cpp
